--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script defer data-domain="eyemei.cc" src="https://plausible.joshatticus.site/js/script.js"></script>
+    <script defer data-domain="eyemei.cc" src="https://plausible.joshattic.us/js/script.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2122521845436476"
      crossorigin="anonymous"></script>
 </head>
